<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="tutorialDetailsItem"
            type="com.aavidsoft.freshersbuddy.tutorials.models.TutorialsDetail"  />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/tutorialImage"
            android:layout_width="400dp"
            android:layout_height="190dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            imageurl="@{tutorialDetailsItem.imageUrls[0]}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tutorialTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="12dp"
            android:ellipsize="end"
            android:text="@{tutorialDetailsItem.title}"
            android:hint="@string/hint_title"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tutorialImage" />

        <TextView
            android:id="@+id/tutorialDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:text="@{tutorialDetailsItem.body}"
            android:hint="@string/hint_description_body"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tutorialTitle" />

        <TextView
            android:id="@+id/tutorialSource"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:hint="@string/hint_source"
            android:text="@{tutorialDetailsItem.author}"
            android:textColor="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tutorialDescription" />

        <TextView
            android:id="@+id/tutorialDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="12dp"
            android:text="@{tutorialDetailsItem.publishedOn}"
            android:hint="@string/hint_date_and_time"
            android:textColor="@color/black"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tutorialDescription" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>